--- a/style.css
+++ b/style.css
@@ -232,3 +232,12 @@ header h1 {
     font-family: 'Dancing Script', cursive;
     
 }
+
+
+/* footer */
+
+footer{
+    width: 100%;
+    position: absolute;
+    top: 94%;
+}
